First HTML content

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -53,7 +53,31 @@
       "imports": [
         "src/templates/partials/head.pug",
         "src/templates/partials/header.pug",
-        "src/templates/partials/footer.pug"
+        "src/templates/components/greeting.pug",
+        "src/templates/components/experience-list.pug",
+        "src/templates/components/sideproject-list.pug",
+        "src/templates/components/education-list.pug",
+        "src/templates/components/experience-item.pug",
+        "src/templates/components/education-item.pug",
+        "src/templates/components/additional-training.pug"
+      ]
+    },
+    {
+      "path": "src/templates/components/sideproject-list.pug",
+      "imports": [
+        "src/templates/components/sideproject-item.pug"
+      ]
+    },
+    {
+      "path": "src/templates/components/education-list.pug",
+      "imports": [
+        "src/templates/components/education-item.pug"
+      ]
+    },
+    {
+      "path": "src/templates/components/additional-training.pug",
+      "imports": [
+        "src/templates/components/education-item.pug"
       ]
     }
   ],
