--- a/prepros-6.config
+++ b/prepros-6.config
@@ -45,7 +45,11 @@
         "src/sass/base/_generic.scss",
         "src/sass/layout/_header.scss",
         "src/sass/layout/_grid.scss",
-        "src/sass/layout/_footer.scss"
+        "src/sass/components/_personal.scss",
+        "src/sass/components/_greeting.scss",
+        "src/sass/components/_experience.scss",
+        "src/sass/components/_sideproject.scss",
+        "src/sass/components/_education.scss"
       ]
     },
     {
